therr-client-web/src/styles/layout/footer/index.scss
@import './messaging-container';

footer {
    z-index: 90;
    position: fixed;
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    bottom: 0;
    left: 0;
    width: 100%;
    height: $footer-height-small;
    text-align: center;
    background: var(--therr-footer-bg, $therr-primary-1);
    box-shadow: $box-shadow-fixed-bot;

    .footer-menu-item {
        display: flex;
        flex: 1;
        justify-content: center;

        &:first-child {
            justify-content: flex-start;
        }

        &:last-child {
            justify-content: flex-end;
        }
    }

    .footer-nav-item {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        cursor: pointer;
        gap: 1px;
        padding: 0.25rem 0.5rem;

        .footer-nav-label {
            color: $therr-white;
            font-size: rem-calc(10px);
            line-height: 1;
            opacity: 0.85;
            white-space: nowrap;
            pointer-events: none;
        }
    }

}

button {
    &#header_login_icon {
        display: flex;
        align-items: center;
        background: transparent;
        box-shadow: none;
    }

    &#footer_close,
    &#footer_home,
    &#footer_messages,
    &#footer_explore,
    &#footer_locations_icon {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 2.15rem;
        background: transparent;
        box-shadow: none;
    }

    &#footer_close,
    &#footer_messages {
        padding: rem-calc(7px);
    }

    &#footer_messages {
        position: relative;

        &.has-unread-messages::after {
            position: absolute;
            content: '';
            background: $therr-alert-error;
            top: 2px;
            right: 2px;
            height: .5rem;
            width: .5rem;
            border-radius: 50%;
            border: 1px solid $therr-primary-1;
        }
    }

    &#footer_home,
    &#footer_explore,
    &#footer_locations_icon {
        padding: rem-calc(7px);
    }


    &#footer_info {
        display: flex;
        align-items: center;
        justify-content: center;
        background: transparent;
        box-shadow: none;
    }

}

// Ensure all footer icon SVGs are white on the teal footer bar
footer {
    .inline-svg {
        svg {
            fill: $therr-white;
        }
    }

    button:hover {
        background: transparentize($therr-white, .85);
    }
}

.inline-svg {
    &.close-button {
        svg {
            fill: $therr-black;
        }
    }

    &.home-button {
        svg {
            fill: $therr-white;
        }
    }
}

@media only screen and (min-width: rem-calc(540px)) {
    footer {
        height: $footer-height;
    }
}

